--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,9 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
 **/build/*
+**/install/*
+
+3rdparty/libs/libX/*.o
+3rdparty/libs/libX/*.so
